--- a/css/Lica.css
+++ b/css/Lica.css
@@ -1,296 +1,269 @@
 @charset "utf-8";
 body {
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    background-color: #F4F4F4;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-color: #F4F4F4;
 }
-
 #logo {
-    width: 1100px;
-    height: 20px;
-    margin: 30px auto 15px auto;
-    /*  border: 1px solid black;*/
+  width: 95%;
+  height: 20px;
+  margin: 30px auto 15px auto;
+  /*  border: 1px solid black;*/
 }
-
 #logo p {
-    color: #6E6E6E;
-    display: inline-block;
-    margin: 0;
-    font-size: 130%;
-    font-family: 'Source Code Pro', ;
+  color: #6E6E6E;
+  display: inline-block;
+  margin: 0;
+  font-size: 130%;
+  font-family: 'Source Code Pro', ;
 }
-
 #contents {
-    width: 1100px;
-    min-height: 400px;
-    /*  border: 1px solid black;*/
-    margin: 0 auto 0 auto;
-    background-color: #fff;
+  width: 95%;
+  min-height: 400px;
+  /*  border: 1px solid black;*/
+  margin: 0 auto 0 auto;
+  background-color: #fff;
 }
-
 #empty {
-    height: 40px;
+  height: 40px;
 }
-
 #slideshow {
-    width: 840px;
-    height: 540px;
-    background-image: url(../images/slideshow4b.jpg), url(../images/slideshow6b.jpg), url(../images/slideshow5b.jpg);
-    background-repeat: no-repeat;
-    animation: slide 25s infinite;
-    margin: 0 auto 0 auto;
-    padding-bottom: 40px;
+  width: 840px;
+  height: 540px;
+  background-image: url(../images/slideshow4b.jpg), url(../images/slideshow6b.jpg), url(../images/slideshow5b.jpg);
+  background-repeat: no-repeat;
+  animation: slide 25s infinite;
+  margin: 0 auto 0 auto;
+  padding-bottom: 40px;
 }
-
 @keyframes slide {
-    0% {
-        background-image: url(../images/slideshow4b.jpg);
-    }
-    50% {
-        background-image: url(../images/slideshow6b.jpg);
-    }
-    75% {
-        background-image: url(../images/slideshow5b.jpg);
-    }
-    100% {
-        background-image: url(../images/slideshow4b.jpg);
-    }
+  0% {
+    background-image: url(../images/slideshow4b.jpg);
+  }
+  50% {
+    background-image: url(../images/slideshow6b.jpg);
+  }
+  75% {
+    background-image: url(../images/slideshow5b.jpg);
+  }
+  100% {
+    background-image: url(../images/slideshow4b.jpg);
+  }
 }
-
 #global-nav {
-    width: 1100px;
-    margin: 0 auto;
-    overflow: hidden;
+  width: 95%;
+  margin: 0 auto;
+  overflow: hidden;
 }
-
 #global-nav ul {
-    float: right;
-    list-style-type: none;
-    margin: 0 auto;
-    padding: 0;
+  float: right;
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0;
 }
-
 #global-nav ul li {
-    display: inline-block;
-    font-size: 80%;
-    color: #6E6E6E;
-    font-family: 'Lato', sans-serif;
+  display: inline-block;
+  font-size: 80%;
+  color: #6E6E6E;
+  font-family: 'Lato', sans-serif;
 }
-
 #global-nav ul li a {
-    display: block;
-    width: 70px;
-    height: 34px;
-    line-height: 34px;
-    text-align: center;
-    text-decoration: none;
-    color: #6E6E6E;
+  display: block;
+  width: 70px;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  text-decoration: none;
+  color: #6E6E6E;
 }
-
 #global-nav ul li a:hover {
-    color: #708090;
-    background-color: #eaeaea;
-    text-decoration: underline;
+  color: #708090;
+  background-color: #eaeaea;
+  text-decoration: underline;
 }
 
 /*ここからwork*/
 
 .wrap p {
-    text-align: center;
-    margin: 0;
-    padding: 30px 0 20px 0;
+  text-align: center;
+  margin: 0;
+  padding: 30px 0 20px 0;
 }
-
 .wrap ul {
-    list-style-type: none;
-    text-align: center;
-    margin: 0;
-    padding: 10px 0;
+  list-style-type: none;
+  text-align: center;
+  margin: 0;
+  padding: 10px 0;
 }
-
 .wrap li {
-    display: inline-block;
-    margin-right: 10px;
-    text-align: center;
+  display: inline-block;
+  margin-right: 10px;
+  text-align: center;
 }
-
 .wrap li img {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 .disnon {
-    display: none;
+  display: none;
 }
-
 .item_box {
-    text-align: center;
-    margin: 0;
-    padding: 30px 0 20px 0;
+  text-align: center;
+  margin: 0;
+  padding: 30px 0 20px 0;
 }
-
 .image_box {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
 .content_wrap p {
-    height: 25px;
+  height: 25px;
   margin: 0 auto 10px auto;
   font-size: 120%;
 }
-
 #tab:after {
-    content: "";
-    height: 0;
-    display: block;
-    visibility: hidden;
+  content: "";
+  height: 0;
+  display: block;
+  visibility: hidden;
 }
-
 #tab {
   list-style-type: none;
   padding-left: 0;
 }
-
 #tab li {
-    display: inline-block;
-    text-align: center;
-    list-style-type: none;
-    padding-right: 10px;
+  display: inline-block;
+  text-align: center;
+  list-style-type: none;
+  padding:0 5px 0 5px;
 }
-
 #tab li:hover {
-    opacity: 0.8;
-    cursor: pointer;
+  opacity: 0.8;
+  cursor: pointer;
 }
-
 
 /*ここからworktop*/
 
 #worktop .date {
-    list-style-type: none;
-    margin-top: 10px;
-    margin-right: 10px;
-    text-align: center;
-    padding: 0;
+  list-style-type: none;
+  margin-top: 10px;
+  margin-right: 10px;
+  text-align: center;
+  padding: 0;
 }
-
 #worktop li {
-    display: inline-block;
-    margin-right: 10px;
-    text-align: center;
-    border: 1px solid black;
+  display: inline-block;
+  margin-right: 10px;
+  text-align: center;
+  border: 1px solid black;
 }
-
 #worktop ul li#ringo a {
-    background-image: url(../images/sumbnail.jpg);
-    background-repeat: no-repeat;
+  background-image: url(../images/sumbnail.jpg);
+  background-repeat: no-repeat;
 }
-
 #worktop ul li a {
-    display: block;
-    text-decoration: none;
-    width: 150px;
-    height: 150px;
-    line-height: 150px;
+  display: block;
+  text-decoration: none;
+  width: 150px;
+  height: 150px;
+  line-height: 150px;
   font-family: 'Josefin Slab', serif;
-    /*  font-family: 'Raleway', sans-serif;*/
-    /*  font-weight: 500;*/
-/*    font-size: 120%;*/
-    color: #444444;
+  /*  font-family: 'Raleway', sans-serif;*/
+  /*  font-weight: 500;*/
+  /*    font-size: 120%;*/
+  color: #444444;
 }
-
 #worktop ul li a:hover {
-    color: #BF00FF;
+  color: #BF00FF;
 }
-
 #worktop li img {
-    cursor: pointer;
+  cursor: pointer;
 }
-
 #worktop {
-    width: 1000px;
-    height: 550px;
-    margin: 50px auto 50px auto;
+  width: 1000px;
+  height: 550px;
+  margin: 50px auto 50px auto;
 }
-
 
 /*ここからprofile*/
 
-
-
 #prf {
-    width: 400px;
-    height: 300px;
-    margin: 0 auto;
-    padding-top: 50px;
+  width: 400px;
+  height: 300px;
+  margin: 0 auto;
+  padding-top: 50px;
 }
-
 #prf ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 /*ここからform*/
 
 form {
-    width: 600px;
-    height: 300px;
-    margin: 0 auto 0 auto;
-    padding-top: 60px;
+  width: 600px;
+  height: 300px;
+  margin: 0 auto 0 auto;
+  padding-top: 60px;
 }
-
 form ul {
-    margin: 0 auto 0 auto;
-    padding: 80px 0 0 150;
+  margin: 0 auto 0 auto;
+  padding: 80px 0 0 150;
 }
-
 form ul li {
-    width: 500px;
-    list-style-type: none;
-    margin: 20px auto 0 auto;
-    font-size: 120%;
-    font-family: 'Lato', sans-serif;
-    color: #6E6E6E;
+  width: 500px;
+  list-style-type: none;
+  margin: 20px auto 0 auto;
+  font-size: 120%;
+  font-family: 'Lato', sans-serif;
+  color: #6E6E6E;
 }
-
 form ul li .mgs {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
-
 label {
-      margin:0 auto 0 auto;
-    width: 100px;
-    float: left;
+  margin: 0 auto 0 auto;
+  width: 100px;
+  float: left;
 }
-
 input[type="text"] {
-    width: 300px;
-    height: 20px;
+  width: 300px;
+  height: 20px;
 }
-
 input[type="email"] {
-    width: 300px;
-    height: 20px;
+  width: 300px;
+  height: 20px;
 }
-
 textarea {
-    width: 250px;
-    height: 60px;
+  width: 250px;
+  height: 60px;
 }
-
 input#button {
-    display: block;
-    margin-left: 100px;
-    ;
+  display: block;
+  margin-left: 100px;
+  ;
 }
-
 input[type="submit"] {
-    width: 100px;
+  width: 100px;
+}
+input[type="submit"]:hover {
+  color: #708090;
+  background-color: #eaeaea;
+  /*    text-decoration: underline;
+    /*    color: #BF00FF;*/
 }
 
-input[type="submit"]:hover {
-    color: #708090;
-    background-color: #eaeaea;
-    /*    text-decoration: underline;
-    /*    color: #BF00FF;*/
+/*ここからfotter*/
+
+#fotter {
+  width: 90%;
+  margin: 40px auto 0 auto;
+}
+#fotter hr {
+  border: 1px dotted #c0c0c0;
+}
+#fotter ul {
+  list-style-type: none;
+  text-align: center;
+  font-size: 70%;
+  color: #a9a9a9;
 }
