--- a/css/work_tab2.css
+++ b/css/work_tab2.css
@@ -2,7 +2,7 @@ body {
   background: #F4F4F4;
 }
 .tabSet {
-  width: 1100px;
+  width: 95%;
   margin: 0 auto;
   color: #808080;
   font-size: 14px;
@@ -50,49 +50,13 @@ body {
   text-decoration: none;
 }
 
-/* アイコンのバリエーション */
-
-
-/*
-.tabSet .tab1 a {
-    background-image: url(imgs/icon1_off.png);
-}
-
-.tabSet .tab1 a.on {
-    background-image: url(imgs/icon1_on.png);
-}
-
-.tabSet .tab2 a {
-    background-image: url(imgs/icon2_off.png);
-}
-
-.tabSet .tab2 a.on {
-    background-image: url(imgs/icon2_on.png);
-}
-
-.tabSet .tab3 a {
-    background-image: url(imgs/icon3_off.png);
-}
-
-.tabSet .tab3 a.on {
-    background-image: url(imgs/icon3_on.png);
-}
-
-.tabSet .tab4 a {
-    background-image: url(imgs/icon4_off.png);
-}
-
-.tabSet .tab4 a.on {
-    background-image: url(imgs/icon4_on.png);
-}
-*/
-
 .tabSet .panels {
   margin: 0 0 0 100px;
   background: #fff;
 }
 .tabSet .panel {
   min-height: 360px;
-  /*    height: 360px;*/
-  /* IE6 min-height */
+}
+.tabSet .panel p {
+  font-size: 80%;
 }
