--- a/css/Lica.css
+++ b/css/Lica.css
@@ -21,7 +21,6 @@ body {
 #contents {
   width: 95%;
   min-height: 400px;
-  /*  border: 1px solid black;*/
   margin: 0 auto 0 auto;
   background-color: #fff;
 }
@@ -29,18 +28,14 @@ body {
   height: 40px;
 }
 
-/*
-.top-slide {
-  width: 95%;
-  height: auto;
-}
-*/
-
 #slideshow {
   width: 840px;
-  height: 540px;
+/*  height: 540px;*/
+/*  height: 0;*/
+  padding-top: 45%;
   background-image: url(../images/slideshow4b.jpg), url(../images/slideshow6b.jpg), url(../images/slideshow5b.jpg);
   background-repeat: no-repeat;
+  background-size: contain;
   animation: slide 25s infinite;
   margin: 0 auto 0 auto;
   padding-bottom: 40px;
